# test_bazel

./: BUILD  MODULE.bazel  README.md  requirements.txt
cli_helper/: cli_helper.bzl
cli_helper/tool/: cli_help.py
cr_checker/: cr_checker.bzl
cr_checker/resources/: BUILD
cr_checker/tool/: BUILD
test/: BUILD  test_cli_help.py
tools/: BUILD  cli_help.py  cli_helper.bzl
