module(
    name = "my_bazel_module",
    version = "1.0.0",
    compatibility_level = 1,
)

###############################################################################
# Core Dependencies
###############################################################################
bazel_dep(name = "rules_python", version = "1.4.1")

###############################################################################
# Python Toolchain
###############################################################################
PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)
