module(
    name = "my_bazel_module",
    version = "1.0.0",
    compatibility_level = 1,
)

###############################################################################
# Core Dependencies
###############################################################################
bazel_dep(name = "rules_python", version = "1.4.1")
bazel_dep(name = "aspect_rules_py", version = "1.4.0")

###############################################################################
# Python Toolchain
###############################################################################
PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)

###############################################################################
# Python Dependencies
###############################################################################
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    envsubst = ["PIP_INDEX_URL"],
    extra_pip_args = ["--index-url=${PIP_INDEX_URL:-https://pypi.org/simple/}"],
    hub_name = "pip_tooling",
    python_version = PYTHON_VERSION,
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip_tooling")
